--- a/data/penginapan.yml
+++ b/data/penginapan.yml
@@ -1,5 +1,5 @@
 enable  : true
-title   : Kenapa kami berbeda dengan yg lain??
+title   : Kenapa Penginapan kami berbeda dengan yg lain??
 description: >
   Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequun. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
   <br>
