--- a/data/mobilteam.yml
+++ b/data/mobilteam.yml
@@ -4,7 +4,10 @@ members  :
   - name  : Jonathon Andrew
     image : https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m3.webp?w=400&radius=25&force_format=png&
     designation : CEO, Project Manager
-    description : a b\nc d\n  e\nf\n
+    description : bikes:
+  - title: mountain bikes
+  - title: road bikes
+  - title: hybrid bikes
 
   - name  : Jesmin Martina
     image : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/ghdepan.jpg?w=300&radius=25&force_format=png&
