--- a/data/mobilteam.yml
+++ b/data/mobilteam.yml
@@ -4,7 +4,7 @@ members  :
   - name  : Jonathon Andrew
     image : https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m3.webp?w=400&radius=25&force_format=png&
     designation : CEO, Project Manager
-    description : bikes:
+    description :
   - title: mountain bikes
   - title: road bikes
   - title: hybrid bikes
