--- a/data/mobilteam.yml
+++ b/data/mobilteam.yml
@@ -4,11 +4,7 @@ members  :
   - name  : Jonathon Andrew
     image : https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m3.webp?w=400&radius=25&force_format=png&
     designation : CEO, Project Manager
-    description :
----
-Harga
-Baru
----
+    description : --- tes
   
 
   - name  : Jesmin Martina
