--- a/data/mobilteam.yml
+++ b/data/mobilteam.yml
@@ -4,9 +4,11 @@ members  :
   - name  : Jonathon Andrew
     image : https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m3.webp?w=400&radius=25&force_format=png&
     designation : CEO, Project Manager
-    description : These lines <br />
-  show up with line breaks <br />
-  but within the same paragraph.
+    description : >
+  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequun. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+  <br>
+  <br>
+  Temporibus autem quibusdam et
   
 
   - name  : Jesmin Martina
