--- a/data/penginapan.yml
+++ b/data/penginapan.yml
@@ -5,7 +5,7 @@ description: >
   <br>
   <br>
   Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.
-image   : images/about/about-company.jpg
+image   : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/content-5a4df3448bb6d-1-650x450.jpg?w=400&radius=25&force_format=png&
 aboutItem:
   - title : Why Choose Us
     description: > 
