--- a/data/penginapanteam.yml
+++ b/data/penginapanteam.yml
@@ -1,11 +1,10 @@
 enable  : true
 title   : PENGINAPAN MURAH JOGJA
 members  :
-  - name  : Jonathon Andrew
+  - name  : HOMESTAY 550k Permalam (10 Person Max)
     image : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/ghtamu.jpg?w=400&radius=25&force_format=png&
-    designation : CEO, Project Manager
-    description : >
-Tes
+    name  : Tes
+    description : Tes
  
   - name  : Jesmin Martina
     image : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/ghdepan.jpg?w=300&radius=25&force_format=png&
