--- a/data/penginapanteam.yml
+++ b/data/penginapanteam.yml
@@ -3,7 +3,7 @@ title   : PENGINAPAN MURAH JOGJA
 members  :
   - name  : HOMESTAY 550k Permalam (10 Person Max)
     image : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/ghtamu.jpg?w=400&radius=25&force_format=png&
-    name  : Tes
+    designation  : Tes
     description : Tes
  
   - name  : Jesmin Martina
