--- a/data/penginapan.yml
+++ b/data/penginapan.yml
@@ -1,16 +1,18 @@
 enable  : true
 title   : Kenapa Penginapan kami berbeda dengan yg lain??
-description: Stressss
+description: Stressss ga bisa ngapa2in
 image   : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/content-5a4df3448bb6d-1-650x450.jpg?w=400&radius=25&force_format=png&
 aboutItem:
-  - title : Why Choose Us
+  - title : Syarat Dan Ketentuan Berlaku
     description: > 
-      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.
+      
+- Jam Operasional 09.00 – 22.00 WIB
+- Pengantaran dan pengambilan mobil/motor mulai jam 09.00-21.00 WIB. Diluar jam diatas bisa langsung datang ke garasi kami.
 
-  - title : What You Get
-    description: > 
-      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.
 
-  - title : Meet The Energy
-    description: > 
-      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.
+- 3 Tanda pengenal/ID (KTP,NPWP,SIM,PASPORT,ID KERJA,BPJS)
+- No Telp HP customer yang bisa dihubungi
+- Semua booking mobil lepas kunci dan motor adalah untuk pemakaian kendaraan di dalam area DIY
+- Semua pemesanan tanpa DP adalah bersifat tidak mengikat
+- Overtime 10% per jam dari Tarif Sewa
+- Saat hari High Season harga berbeda dengan harga hari normal
