--- a/data/penginapan.yml
+++ b/data/penginapan.yml
@@ -4,12 +4,12 @@ description: Stressss ga bisa ngapa2in
 image   : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/content-5a4df3448bb6d-1-650x450.jpg?w=400&radius=25&force_format=png&
 aboutItem:
   - title : Syarat Dan Ketentuan Berlaku
-    description: -- Jam Operasional 09.00 sd 22.00 WIB
--- Pengantaran dan pengambilan mobil/motor mulai jam 09.00 sd 21.00 WIB. Diluar jam diatas bisa langsung datang ke garasi kami
--- 3 Tanda pengenal/ID (KTP,NPWP,SIM,PASPORT,ID KERJA,BPJS)
--- No Telp HP customer yang bisa dihubungi
--- Semua booking mobil lepas kunci dan motor adalah untuk pemakaian kendaraan di dalam area DIY
--- Semua pemesanan tanpa DP adalah bersifat tidak mengikat
--- Overtime 10% per jam dari Tarif Sewa
--- Saat hari High Season harga berbeda dengan harga hari normal
+    description: Jam Operasional 09.00 sd 22.00 WIB
+ Pengantaran dan pengambilan mobil/motor mulai jam 09.00 sd 21.00 WIB. Diluar jam diatas bisa langsung datang ke garasi kami
+ 3 Tanda pengenal/ID KTP,NPWP,SIM,PASPORT,ID KERJA,BPJS
+ No Telp HP customer yang bisa dihubungi
+ Semua booking mobil lepas kunci dan motor adalah untuk pemakaian kendaraan di dalam area DIY
+ Semua pemesanan tanpa DP adalah bersifat tidak mengikat
+ Overtime 10% per jam dari Tarif Sewa
+ Saat hari High Season harga berbeda dengan harga hari normal
 
