--- a/data/penginapan.yml
+++ b/data/penginapan.yml
@@ -4,8 +4,8 @@ description: Stressss ga bisa ngapa2in
 image   : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/content-5a4df3448bb6d-1-650x450.jpg?w=400&radius=25&force_format=png&
 aboutItem:
   - title : Syarat Dan Ketentuan Berlaku
-    description: Jam Operasional 09.00 sd 22.00 WIB
- Pengantaran dan pengambilan mobil atau motor mulai jam 09.00 sd 21.00 WIB. Diluar jam diatas bisa langsung datang ke garasi kami
+    description: Jam Operasional 09 00 sd 22 00 WIB
+ Pengantaran dan pengambilan mobil atau motor mulai jam 09 00 sd 21 00 WIB. Diluar jam diatas bisa langsung datang ke garasi kami
  3 Tanda pengenal ID KTP,NPWP,SIM,PASPORT,ID KERJA,BPJS
  No Telp HP customer yang bisa dihubungi
  Semua booking mobil lepas kunci dan motor adalah untuk pemakaian kendaraan di dalam area DIY
