--- a/data/penginapanclient.yml
+++ b/data/penginapanclient.yml
@@ -1,6 +1,6 @@
 enable  : true
 title   : OUR HAPPY ROOM
-subtitle: PGALERI PENGINAPAN
+subtitle: GALERI PENGINAPAN
 clientsLogo:
   - image : https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghkamar.jpg?func=crop&w=320&h=240&v2
   - image : https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghkluarga.jpg?func=crop&w=320&h=240&v2
