--- a/data/penginapan.yml
+++ b/data/penginapan.yml
@@ -5,4 +5,8 @@ image   : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/
 aboutItem:
   - title : Syarat Dan Ketentuan Berlaku
     description: Tes
+  - title : Syarat dan Ketentuan Berlaku
+    description: Tes
+   -title : Syarat dan Ketentuan Berlaku
+    description : Jam Operasional 09 00 sd 22 00 WIB. Pengantaran dan pengambilan mobil atau motor mulai jam 09 00 sd 21 00 WIB. Diluar jam diatas bisa langsung datang ke garasi kami. 3 Tanda pengenal ID KTP,NPWP,SIM,PASPORT,ID KERJA,BPJS. No Telp HP customer yang bisa dihubungi. Semua booking mobil lepas kunci dan motor adalah untuk pemakaian kendaraan di dalam area DIY. Semua pemesanan tanpa DP adalah bersifat tidak mengikat. Overtime 10 persen per jam dari Tarif. Sewa Saat hari High Season harga berbeda dengan harga hari normal
 
