--- a/data/penginapan.yml
+++ b/data/penginapan.yml
@@ -3,15 +3,14 @@ title   : Kenapa Penginapan kami berbeda dengan yg lain??
 description: Stressss ga bisa ngapa2in
 image   : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/content-5a4df3448bb6d-1-650x450.jpg?w=400&radius=25&force_format=png&
 aboutItem:
-  - title : Syarat Dan Ketentuan Berlaku 1
-    description: >
-    Tes
- 
- - title : Syarat dan Ketentuan Berlaku 2
-    description: >
-    Tes
- 
- -title : Syarat dan Ketentuan Berlaku 3
-    description : >
-    Tes
+  - title : Why Choose Us
+    description: > 
+      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.
 
+  - title : What You Get
+    description: > 
+      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.
+
+  - title : Meet The Energy
+    description: > 
+      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.
