--- a/data/penginapan.yml
+++ b/data/penginapan.yml
@@ -3,9 +3,9 @@ title   : Kenapa Penginapan kami berbeda dengan yg lain??
 description: Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari penginapan. Di Bening Guest House kami menyediakan kamar yang terdekat dengan UGM dan UNY jogja, lalu kamar dan homestay dengan  harga permalam mulai dari 165 ribu saja dan bisa kamu booking juga via aplikasi Traveloka!
 image   : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/content-5a4df3448bb6d-1-650x450.jpg?w=400&radius=25&force_format=png&
 aboutItem:
-  - title : Why Choose Us
+  - title : Syarat dan Ketentuan Berlaku
     description: > 
-      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.
+      Jam Operasional 09.00 sd 22.00 WIB. Pengantaran dan pengambilan mobil atau motor mulai jam 09.00 sd 21.00 WIB. Diluar jam diatas bisa langsung datang ke garasi kami
 
   - title : What You Get
     description: > 
