--- a/data/penginapan.yml
+++ b/data/penginapan.yml
@@ -7,10 +7,10 @@ aboutItem:
     description: > 
       Jam Operasional 09.00 sd 22.00 WIB. Pengantaran dan pengambilan mobil atau motor mulai jam 09.00 sd 21.00 WIB. Diluar jam diatas bisa langsung datang ke garasi kami
 
-  - title : What You Get
+  - title : Syarat dan Ketentuan Berlaku
     description: > 
-      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.
+      3 Tanda pengenal ID KTP,NPWP,SIM,PASPORT,ID KERJA,BPJS. No Telp HP customer yang bisa dihubungi. Semua booking mobil lepas kunci dan motor adalah untuk pemakaian kendaraan di dalam area DIY.
 
   - title : Meet The Energy
     description: > 
-      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.
+      Semua pemesanan tanpa DP adalah bersifat tidak mengikat. Overtime 10 persen per jam dari Tarif. Sewa Saat hari High Season harga berbeda dengan harga hari normal
