--- a/data/penginapan.yml
+++ b/data/penginapan.yml
@@ -9,8 +9,8 @@ aboutItem:
 
   - title : Syarat dan Ketentuan Berlaku
     description: > 
-      3 Tanda pengenal ID KTP,NPWP,SIM,PASPORT,ID KERJA,BPJS. No Telp HP customer yang bisa dihubungi. Semua booking mobil lepas kunci dan motor adalah untuk pemakaian kendaraan di dalam area DIY.
+      3 Tanda pengenal ID KTP,NPWP,SIM,PASPORT,ID KERJA,BPJS. No Telp HP customer yang bisa dihubungi. Semua booking mobil lepas kunci dan motor untuk pemakaian di dalam area DIY.
 
-  - title : Meet The Energy
+  - title : Syarat dan Ketentuan Berlaku
     description: > 
       Semua pemesanan tanpa DP adalah bersifat tidak mengikat. Overtime 10 persen per jam dari Tarif. Sewa Saat hari High Season harga berbeda dengan harga hari normal
