--- a/data/penginapan.yml
+++ b/data/penginapan.yml
@@ -13,4 +13,4 @@ aboutItem:
 
   - title : Syarat dan Ketentuan Berlaku
     description: > 
-      Semua pemesanan tanpa DP adalah bersifat tidak mengikat. Overtime 10 persen per jam dari Tarif. Sewa Saat hari High Season harga berbeda dengan harga hari normal
+      Semua pemesanan tanpa DP atau uang muka adalah bersifat tidak mengikat. Overtime 10 persen per jam dari Tarif. Sewa saat hari High Season harga bisa berbeda dengan harga di hari normal
