--- a/config.toml
+++ b/config.toml
@@ -75,7 +75,7 @@ title = "MINJEM MOTOR"
 [[params.banner.flipText]]
 title = "NGINEP"
 [[params.banner.flipText]]
-title = "GA NGAPA2IN GPP KOK"
+title = "Ga ngapa2in gpp kok"
 
 # Homepage About Section
 [params.about]
