--- a/config.toml
+++ b/config.toml
@@ -75,7 +75,7 @@ title = "MINJEM MOTOR"
 [[params.banner.flipText]]
 title = "NGINEP"
 [[params.banner.flipText]]
-title = "TAPI BAYAR YA kak :)"
+title = "TAPI BAYAR YA kak &#128514; "
 
 # Homepage About Section
 [params.about]
