--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://ariefbuddies.github.io/beningweb/"
 languageCode = "en-us"
-title = "Bening Abadi Trans"
+title = "Sewa Mobil Jogja"
 theme = "timer-hugo"
 # post pagination
 paginate = "2" # see https://gohugo.io/extras/pagination/
@@ -61,7 +61,7 @@ contactFormAction = "#" # contact form works with https://formspree.io
 enable = true
 bgImage = ""
 heading = "Hai, di BENING ABADI TRANSPORT kamu bisa"
-description = "Rental Motor Mulai 70k/Hari | Sewa Mobil Mulai 250k/Hari | Penginapan Mulai 165k/Malam Telpon 0274-583197 & 0274-547440"
+description = "Rental Motor Mulai 70k/Hari | Sewa Mobil Mulai 250k/Hari | Penginapan Mulai 165k/Malam di Telpon 0274-583197 & 0274-547440"
 # button
 btn = false
 btnText = "More"
