--- a/config.toml
+++ b/config.toml
@@ -75,7 +75,7 @@ title = "minjem motor"
 [[params.banner.flipText]]
 title = "nginep"
 [[params.banner.flipText]]
-title = "murah kak bayarnya :)"
+title = "tapi bayar :)"
 
 # Homepage About Section
 [params.about]
