--- a/data/sewamotorjogja.yml
+++ b/data/sewamotorjogja.yml
@@ -5,7 +5,7 @@ description: >
   <br>
   <br>
   Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.
-image   : images/about/about-company.jpg
+image   : https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s3.jpg?w=400&radius=25&force_format=png&
 aboutItem:
   - title : Why Choose Us
     description: > 
