--- a/data/sewamotorjogja.yml
+++ b/data/sewamotorjogja.yml
@@ -1,7 +1,7 @@
 enable  : true
 title   : Kenapa Motor kami berbeda dengan yg lain??
 description: >
-  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequun. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+  Butuh motor cepet bro!! Buruan telepon ato wa ke bening abadi transport! Harga sewa mulai dari 70 ribu rupiah lo!! Dan lokasinya terdekat dengan UGM dan UNY Jogja !!!
   <br>
   <br>
   Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.
