--- a/data/penginapan.yml
+++ b/data/penginapan.yml
@@ -9,7 +9,7 @@ aboutItem:
 
   - title : Syarat dan Ketentuan Berlaku
     description: > 
-      3 Tanda pengenal ID KTP,NPWP,SIM,PASPORT,ID KERJA,BPJS. No Telp HP customer yang bisa dihubungi. Semua booking mobil lepas kunci dan motor untuk pemakaian di dalam area DIY.
+      3 Tanda pengenal ID KTP,NPWP,SIM,PASPORT,ID KERJA,BPJS. No HP customer yang bisa dihubungi. Semua booking mobil lepas kunci dan motor untuk pemakaian di dalam area DIY.
 
   - title : Syarat dan Ketentuan Berlaku
     description: > 
