--- a/data/sewamotorjogja.yml
+++ b/data/sewamotorjogja.yml
@@ -1,20 +1,20 @@
 enable  : true
 title   : Kenapa Motor kami berbeda dengan yg lain??
 description: >
-  Butuh motor cepet bro!! Buruan telepon ato wa ke bening abadi transport! Harga sewa mulai dari 70 ribu rupiah lo!! Dan lokasinya terdekat dengan UGM dan UNY Jogja !!!
+  Butuh motor cepet ?!? Buruan telepon ato wa ke bening abadi transport! Harga sewa mulai dari 70 ribu rupiah lo!! Dan lokasinya terdekat dengan UGM dan UNY Jogja !!!
   <br>
   <br>
-  Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.
+  Mumer kok!
 image   : https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s3.jpg?w=400&radius=25&force_format=png&
 aboutItem:
-  - title : Why Choose Us
+  - title : Syarat dan Ketentuan Berlaku
     description: > 
-      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.
+      Jam Operasional 09.00 sd 22.00 WIB. Pengantaran dan pengambilan mobil atau motor mulai jam 09.00 sd 21.00 WIB. Diluar jam diatas bisa langsung datang ke garasi kami
 
-  - title : What You Get
+  - title : Syarat dan Ketentuan Berlaku
     description: > 
-      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.
+      3 Tanda pengenal ID KTP,NPWP,SIM,PASPORT,ID KERJA,BPJS. No HP customer yang bisa dihubungi. Semua booking mobil lepas kunci dan motor untuk pemakaian di dalam area DIY.
 
-  - title : Meet The Energy
+  - title : Syarat dan Ketentuan Berlaku
     description: > 
-      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.
+      Semua pemesanan tanpa DP atau uang muka adalah bersifat tidak mengikat. Overtime 10 persen per jam dari Tarif. Sewa saat hari High Season harga bisa berbeda dengan harga di hari normal
