--- a/data/penginapanteam.yml
+++ b/data/penginapanteam.yml
@@ -1,13 +1,21 @@
 enable  : true
 title   : PENGINAPAN MURAH JOGJA
 members  :
-  - name  : HOMESTAY 550k Permalam (10 Person Max)
+  - name  : HOMESTAY 700k/malam (10 Person Max)
     image : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/ghtamu.jpg?w=400&radius=25&force_format=png&
-    designation  : Tes
-    description : Tes
+    designation : √Cek In : 13.00 WIB √Cek Out : 12.00 WIB
+Fasilitas :
+•3 Kamar Tidur AC
+•1 Kamar Musholla
+•2 Kamar Mandi Luar
+•1 Ruang Tamu
+•1 Ruang Keluarga Dengan LCD TV Dan Ruang Makan
+•Dapur Dengan Peralatan Dapur Yang Lengkap
+•Garasi
+    description : TesT
  
   - name  : Kamar Deluxe
-    image : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/ghdepan.jpg?w=300&radius=25&force_format=png&
+    image : https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/content-5b18a82fb5c8e-e1560855835374.jpg?w=400&radius=25&force_format=png&
     designation : CEO, Project Manager
     description : Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
     
