--- a/config.toml
+++ b/config.toml
@@ -78,8 +78,8 @@ title = "nginep"
 title = "tapi bayar :)"
 
 # Homepage About Section
-[params.about]
-enable =false
+[params.penginapan]
+enable = true
 title = "Tentang Bening Abadi"
 content = "Sejak dulu kala Bening Abadi Transport telah berkecimpung di bidang transportasi dan penginapan murah di Yogyakarta dan berlolokasi yang terdekat dengan UGM dan UNY Jogja."
 image = "https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m14.webp?w=400&radius=20&force_format=png&"
