--- a/data/penginapanteam.yml
+++ b/data/penginapanteam.yml
@@ -1,18 +1,18 @@
 enable  : true
 title   : PENGINAPAN MURAH JOGJA
 members  :
-  - name  : HOMESTAY 700k/malam (10 Person Max)
+  - name  : HOMESTAY | 700k/malam (10 Max)
     image : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/ghtamu.jpg?w=400&radius=25&force_format=png&
     designation : Wesss
     description : TesTggg
  
-  - name  : Kamar Deluxe
+  - name  : Kamar Deluxe | 235k/malam (2 Max)
     image : https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/content-5b18a82fb5c8e-e1560855835374.jpg?w=400&radius=25&force_format=png&
-    designation : CEO Wes ra
+    designation : 
     description : Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
     
   
-  - name  : Kamar Standar
+  - name  : Kamar Standar | 165k/malam (2 Max)
     image : https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/content-5b18a8a3a357f-e1561076685884.jpg?w=400&radius=25&force_format=png&
     designation : CEO
     description : Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
