--- a/data/penginapanteam.yml
+++ b/data/penginapanteam.yml
@@ -3,8 +3,16 @@ title   : PENGINAPAN MURAH JOGJA
 members  :
   - name  : HOMESTAY | 700k/malam (10 Max)
     image : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/ghtamu.jpg?w=400&radius=25&force_format=png&
-    designation : Wesss
-    description : TesTggg
+    designation : Cek In : 13.00 WIB Cek Out : 12.00 WIB
+    description : Fasilitas :
+•3 Kamar Tidur AC
+•1 Kamar Musholla
+•2 Kamar Mandi Luar
+•1 Ruang Tamu
+•1 Ruang Keluarga Dengan LCD TV Dan Ruang Makan
+•Dapur Dengan Peralatan Dapur Yang Lengkap
+•Garasi
+
  
   - name  : Kamar Deluxe | 235k/malam (2 Max)
     image : https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/content-5b18a82fb5c8e-e1560855835374.jpg?w=400&radius=25&force_format=png&
