--- a/config.toml
+++ b/config.toml
@@ -49,7 +49,7 @@ home = "Home"
 logo = "images/logo.png"
 dateFormat = "6 January 2006"
 # Meta data
-description = "Themefisher"
+description = "Timer Hugo theme"
 author = "Themefisher"
 # Google Analitycs
 googleAnalitycsID = "Your ID"
