--- a/data/penginapanteam.yml
+++ b/data/penginapanteam.yml
@@ -9,7 +9,7 @@ members  :
  
   - name  : Kamar Deluxe | 235k/malam (2 Max)
     image : https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/content-5b18a82fb5c8e-e1560855835374.jpg?w=400&radius=25&force_format=png&
-    designation : 
+    designation : ---
     description : Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
     
   
