--- a/data/penginapanteam.yml
+++ b/data/penginapanteam.yml
@@ -3,7 +3,7 @@ title   : PENGINAPAN MURAH JOGJA
 members  :
   - name  : HOMESTAY | 700k/malam (10 Max)
     image : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/ghtamu.jpg?w=400&radius=25&force_format=png&
-    designation : Cek In 
+    designation : √Cek In | 13.00 WIB √Cek Out | 12.00 WIB 
     description : Fasilitas
 
  
