--- a/data/penginapanteam.yml
+++ b/data/penginapanteam.yml
@@ -4,7 +4,14 @@ members  :
   - name  : HOMESTAY | 700k/malam (10 Max)
     image : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/ghtamu.jpg?w=400&radius=25&force_format=png&
     designation : √Cek In | 13.00 WIB √Cek Out | 12.00 WIB 
-    description : Fasilitas
+    description : Fasilitas |
+•3 Kamar Tidur AC
+•1 Kamar Musholla
+•2 Kamar Mandi Luar
+•1 Ruang Tamu
+•1 Ruang Keluarga Dengan LCD TV Dan Ruang Makan
+•Dapur Dengan Peralatan Dapur Yang Lengkap
+•Garasi
 
  
   - name  : Kamar Deluxe | 235k/malam (2 Max)
