--- a/data/penginapanteam.yml
+++ b/data/penginapanteam.yml
@@ -3,17 +3,16 @@ title   : PENGINAPAN MURAH JOGJA
 members  :
   - name  : HOMESTAY | 700k/malam (10 Max)
     image : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/ghtamu.jpg?w=400&radius=25&force_format=png&
-    designation : √Cek In | 13.00 WIB √Cek Out | 12.00 WIB 
+    designation : Check In | 13.00 WIB >> Check Out | 12.00 WIB 
     description : Fasilitas >> 3 Kamar Tidur AC | 1 Kamar Musholla | 2 Kamar Mandi Luar | 1 Ruang Tamu | 1 Ruang Keluarga Dengan LCD TV | Ruang Makan Dapur Dengan Peralatan Dapur Yang Lengkap | Garasi
 
  
   - name  : Kamar Deluxe | 235k/malam (2 Max)
     image : https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/content-5b18a82fb5c8e-e1560855835374.jpg?w=400&radius=25&force_format=png&
-    designation : ---
-    description : Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-    
+    designation : Check In | 13.00 WIB >> Check Out | 12.00 WIB
+    description : Fasilitas >> AC, TV, Bed, Free Wifi, Welcome Drink, Kamar Mandi Dalam (Air Panas) | Extra Bed/person  Rp 50.000 / Malam | Extra Time Rp. 23.500 per jam (selama persediaan kamar masih ada)
   
   - name  : Kamar Standar | 165k/malam (2 Max)
     image : https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/content-5b18a8a3a357f-e1561076685884.jpg?w=400&radius=25&force_format=png&
-    designation : CEO
+    designation : Check In | 13.00 WIB >> Check Out | 12.00 WIB
     description : Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
