--- a/data/penginapanteam.yml
+++ b/data/penginapanteam.yml
@@ -15,4 +15,4 @@ members  :
   - name  : Kamar Standar | 165k/malam (2 Max)
     image : https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/content-5b18a8a3a357f-e1561076685884.jpg?w=400&radius=25&force_format=png&
     designation : Check In | 13.00 WIB >> Check Out | 12.00 WIB
-    description : Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+    description : Fasilitas >> AC, TV, Bed, Free Wifi, Welcome Drink, Kamar Mandi Dalam (Air Panas) | Extra Bed/person  Rp 50.000 / Malam | Extra Time Rp. 16.500 per jam (selama persediaan kamar masih ada)
