--- a/data/mobilteam.yml
+++ b/data/mobilteam.yml
@@ -1,9 +1,9 @@
 enable  : true
 title   : SEWA MOBIL JOGJA
 members  :
-  - name  : Jonathon Andrew
-    image : https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m3.webp?w=400&radius=25&force_format=png&
-    designation : CEO, Project Manager
+  - name  : Honda Beat Street New
+    image : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m3.webp?w=400&radius=25&force_format=png&
+    designation : 70Rb/hari | 140Rb/2hari | 200Rb/3hari
     description : --- |
                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequun. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
                    <br>
