--- a/data/motorteam.yml
+++ b/data/motorteam.yml
@@ -3,8 +3,8 @@ title   : Sewa MotorJuga
 members  :
   - name  : Beat Trail
     image : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/beat-trail.jpg?w=400&radius=25&force_format=png&
-    designation : 70Rb/hari >> 140Rb/2hari >> 200Rb/3hari &#128513;
-    description : Max 2 helm per 1 motor | Free pengantaran dan pengambilan di area kota (stasiun dan hotel) | Jas hujan (selama persediaan masih ada) &#128513;
+    designation : 70Rb/hari >> 140Rb/2hari >> 200Rb/3hari
+    description : Max 2 helm per 1 motor >> Free pengantaran dan pengambilan di area kota (stasiun dan hotel) >> Jas hujan (selama persediaan masih ada) &#128513;
   
   
   - name  : Jesmin Martina
