--- a/data/motorteam.yml
+++ b/data/motorteam.yml
@@ -23,4 +23,16 @@ members  :
     image : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/scoopy.jpg?w=400&radius=25&force_format=png&
     designation : 70Rb/hari >> 140Rb/2hari >> 200Rb/3hari
     description : Max 2 helm per 1 motor >> Free pengantaran dan pengambilan di area kota (stasiun dan hotel) >> Jas hujan (selama persediaan masih ada)
+    
+    
+  - name  : Honda Vario 150
+    image : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/vario.jpg?w=400&radius=25&force_format=png&
+    designation : 70Rb/hari >> 140Rb/2hari >> 200Rb/3hari
+    description : Max 2 helm per 1 motor >> Free pengantaran dan pengambilan di area kota (stasiun dan hotel) >> Jas hujan (selama persediaan masih ada)
+    
+    - name  : Honda Vario 125
+    image : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/vario.jpg?w=400&radius=25&force_format=png&
+    designation : 70Rb/hari >> 140Rb/2hari >> 200Rb/3hari
+    description : Max 2 helm per 1 motor >> Free pengantaran dan pengambilan di area kota (stasiun dan hotel) >> Jas hujan (selama persediaan masih ada)
+
 
