--- a/data/sewamotorjogja.yml
+++ b/data/sewamotorjogja.yml
@@ -1,5 +1,5 @@
 enable  : true
-title   : Kenapa Motor kami berbeda dengan yg lain??
+title   : Kenapa kami berbeda dengan yang lain???
 description: >
   Butuh motor cepet ?!? Buruan telepon ato wa ke bening abadi transport! Harga sewa mulai dari 70 ribu rupiah lo!! Dan lokasinya terdekat dengan UGM dan UNY Jogja !!!
   <br>
