--- a/data/motorclient.yml
+++ b/data/motorclient.yml
@@ -1,5 +1,5 @@
 enable  : true
-title   : Galeri Guest House
+title   : Galeri Bening Guest House 
 subtitle: 
 clientsLogo:
   - image : https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghkamar.jpg?w=300&radius=20&force_format=png&
